<resources>
    <string name="app_name">TravelBus</string>
    <string name="main_title">oooo</string>
    <string name="Nombre">Name</string>
    <string name="Password">Pass</string>
    <string name="Puerto">Puerto</string>
    <string name="IP">IP</string>
    <string name="IP_Exam">XXX.XXX.XXX.XXX</string>
    <string name="Connect"> Conectar </string>
    <string name="Informacion">Esta aplicacion de compra de billetes online es un proyecto de la asignatura Servicios Móviles en la que se ponen en práctica los diversos conocimentos aprendidos durante ésta y otras asignaturas y también los aprendizajes autónomos. Realizado por David Sánchez Fernández.</string>
    <string name="org">Origen</string>
    <string name="dest">Destino</string>
    <string name="fecha">Fecha</string>
    <string name="Send"> Buscar </string>
    <string name="origen_prompt">Elija un origen</string>
    <string name="Destino_prompt">Elija un destino</string>
    <string name="FechaValue">dd-MM-AAAA</string>
    <string name="Billetes">Billetes:</string>
    <string name="Identificacion">Por favor, identifíquese para acceder al servicio de compra.</string>
    <string name="Invalid_user">Usuario y/o contraseña incorrectos</string>
    <string name="Faltan_datos">Por favor ingrese usuario y contraseña</string>
    <string name="Falta_fecha">Por favor ingrese una fecha</string>
    <string name="Fecha_inv">No se han encontrado billetes que coincidan con la búsqueda o no ha introducido una fecha válida</string>
    <string name="Server_noConect">El servidor no esta activo.</string>
    <string name="IDBillete">Nº Billete:</string>
    <string name="precio">Precio:</string>
    <string name="Session_end">Su sesión anterior ha caducado.</string>
    <string name="Session_rec">Se ha recuperado la sesión anterior.</string>
    <string name="Enhorabuena">Enhorabuena </string>
    <string name="Compra">, ha comprado el siguiente billete:</string>
    <string name="Busqueda_billete">Indique los valores de búsqueda de billetes.</string>
    <string name="action_settings">Ajustes</string>
    <string name="action_information">Información</string>
    <string name="Actualizar">Actualizar</string>
    <string name="Faltan_ajustes">Por favor, acceda a los ajustes para configurar la IP y el puerto.</string>
    <string name="Falta_ajuste_IP">Por favor, acceda a ajustes para configurar la IP</string>
    <string name="Falta_ajuste_puerto">Por favor, acceda a los ajuste para configurar el puerto</string>
    <string name="Ajustes_cambiados">Sus ajustes han sido modificados.</string>
    <string name="Falta_IP_puerto">Por favor, ingrese un puerto y una IP válidas</string>
    <string name="Salir">Pulse otra vez para salir de la aplicación.</string>
    <string name="DesconectarYSalir">¿Seguro que desea cerrar sesión y salir de la aplicación?</string>
    <string name="Si">Si</string>
    <string name="No">No</string>
    <string name="euro">€</string>
</resources>
