<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"

    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/main"
        android:padding="@dimen/activity_horizontal_margin"
        >



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Identificacion"
        android:id="@+id/texto"
        style="@style/text_style"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:paddingBottom="15dp"
        />


    <EditText
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/Pass"
        android:layout_below="@+id/Nombre"
        android:layout_alignStart="@+id/Nombre"
        android:layout_alignLeft="@id/Nombre"
        android:layout_alignEnd="@+id/Nombre"
        android:layout_alignRight="@id/Nombre"
        />

    <TextView
        android:text="@string/Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/viewPass"
        android:layout_alignBaseline="@+id/Pass"
        android:layout_alignBottom="@+id/Pass"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        style="@style/text_style"
         />

    <Button
        style="@style/text_style"
        android:background="@drawable/button"
        android:text="@string/Connect"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:id="@+id/boton1"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <EditText
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text=""
        android:id="@+id/Nombre"
        android:layout_below="@+id/texto"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/boton1"
        android:layout_alignStart="@+id/boton1" />

    <TextView
        android:text="@string/Nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ViewName"


        style="@style/text_style"
        android:layout_alignBaseline="@+id/Nombre"
        android:layout_alignBottom="@+id/Nombre"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

    </TextView>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/linlaHeaderProgress1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:layout_gravity="center"

        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            android:id="@+id/pbHeaderProgress"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </ProgressBar>
    </RelativeLayout>
</RelativeLayout>